--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <h3>Hello It's Me</h3>
       <h1>Mukund Kumar</h1>
       <h3>And I'm a <span class="multiple-text"></span></h3>
-      <p>"I am a Frontend Developer skilled in HTML, CSS, and JavaScript. I enjoy creating user-friendly web applications and continuously learning new technologies."</p>
+      <p>"I am a cybersecurity-focused developer with hands-on experience in building secure web applications and defensive security tools. I enjoy working on real-world cybersecurity projects such as phishing detection, intrusion detection systems, and password security tools, while continuously learning new technologies and security concepts."</p>
       <div class="social-media">
         <a href="#"><i class='bx bxl-facebook'></i></a>
         <a href="#"><i class='bx bxl-instagram'></i></a>
@@ -49,8 +49,8 @@
       </div>
       <div class="about-content">
         <h2 class="heading">About <span>Me</span></h2>
-        <h3>Fronted Developer!</h3>
-        <p>I specialize in crafting visually appealing, responsive websites and dynamic user experiences using HTML, CSS, and JavaScript. My journey into web development began with a curiosity about how websites work, and over time, it has transformed into a full-fledged passion. Developing projects like Tic Tac Toe and a feature-rich Portfolio Website, showcasing my technical skills and creativity.</p>
+        <h3>Cybersecurity & Web Developer</h3>
+        <p>I am a passionate cybersecurity enthusiast and web developer with a strong interest in defensive security and ethical hacking. I work on projects related to phishing detection, intrusion detection systems (IDS), password security, and system monitoring. Along with cybersecurity, I have a solid foundation in HTML, CSS, JavaScript, and Python, allowing me to build secure and user-friendly web applications. My goal is to grow as a cybersecurity professional and contribute to building safer digital systems.</p>
         <a href="#" class="btn">Read More</a>
       </div>
   </section>
@@ -62,21 +62,21 @@
       <div class="services-box">
         <i class='bx  bx-code-alt'></i>
         <h3>Web Development</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit corrupti, ex nesciunt, minus atque nam exercitationem dolorum iste alias error corporis quia numquam molestiae ut, sint enim nemo in quas?</p>
+        <p>I design and develop responsive, secure, and user-friendly websites using HTML, CSS, JavaScript, and Python. My focus is on clean design, performance, and basic security best practices while building real-world web applications and portfolios.</p>
         <a href="#" class="btn">Read More</a>
       </div>
 
       <div class="services-box">
         <i class="bx bx-shield-quarter"></i>
-        <h3>Ethical Hacking</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit corrupti, ex nesciunt, minus atque nam exercitationem dolorum iste alias error corporis quia numquam molestiae ut, sint enim nemo in quas?</p>
+        <h3>Ethical Hacking & Cybersecurity</h3>
+        <p>I work on defensive cybersecurity projects such as phishing detection systems, password strength analyzers, intrusion detection systems (IDS), and malware awareness tools. My focus is on identifying security risks, understanding attack patterns, and improving system security in an ethical and responsible manner.</p>
         <a href="#" class="btn">Read More</a>
       </div>
 
       <div class="services-box">
         <i class="bx bx-bar-chart-alt-2"></i>
         <h3>Data Analysis</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit corrupti, ex nesciunt, minus atque nam exercitationem dolorum iste alias error corporis quia numquam molestiae ut, sint enim nemo in quas?</p>
+        <p>I analyze system and network data to identify suspicious activities such as unauthorized access attempts, port scanning, and abnormal behavior. Using Python-based tools, I convert raw data into meaningful security insights for monitoring and detection purposes.</p>
         <a href="#" class="btn">Read More</a>
       </div>
 
@@ -155,4 +155,5 @@
   <script src="https://unpkg.com/scrollreveal"></script>
   <script src="script.js"></script>
 </body>
+
 </html>
